New version of readme/notebooks

--- a/chatbot_setup.ipynb
+++ b/chatbot_setup.ipynb
@@ -8,33 +8,13 @@
     "# A Chatbot using GPT and a Database\n",
     "This allows multiple chatbot types (e.g. a health coach and a learning assistant) to be created. Multiple chatbot instances can be created per chatbot type (e.g. a health coach for user X and user Y, and a learning assistant for user P and user Q). Both, types and instances are stored with and referenced by an ID (e.g. a UUID) in the database.\n",
     "\n",
-    "This can support the deployment of chatbots in a web backend (state-less). For example, the IDs of the type and instance can be read from parameters of a URL that users have received from you.\n",
-    "\n",
-    "A chatbot is created with the following arguments.\n",
-    "- database_file: File of SQLite (in Folder data/)\n",
-    "- type_id: Reference to a chatbot type (existing or new one)\n",
-    "- instance_id: Reference to chatbot instance (existing or new one)\n",
-    "- type_role: Role prompt of chatbot type (will be turned into a first prompt with role:system)\n",
-    "- instance_context: Context prompt of chatbot instance (will be turned into a second prompt with role:system)\n",
-    "- instance_starter: Prompt that will be used to generate an initial message to the user (will be turned into a third prompt with role:system)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 1. Preparation\n",
     "\n",
     "##### 1.1. Set the OpenAI API Key and Model\n",
     "Rename the file **chatbot/openai_template.py** to **chatbot/openai.py** and set the following keys.\n",
     "- OPENAI_KEY = \"your OpenAI API key in quotes\"\n",
-    "- OPENAI_MODEL = \"model name in quotes, e.g. gpt-3.5-turbo-16k\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- OPENAI_MODEL = \"model name in quotes, e.g. gpt-3.5-turbo-16k\"\n",
+    "\n",
     "##### 1.2. Install openai package"
    ]
   },
@@ -75,37 +55,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.1. Prompt Engineering\n",
-    "To create a chatbot, we need to provide prompts. There are three prompts that can be used to customise the behaviour of the chatbot.\n",
-    "- **Role Prompt (type_role)**\n",
-    "    This prompt will be put at the beginning of the utterances sent to openai for completion. If you create multiple chatbots of the same type, this prompt will be the same for each one of them.\n",
-    "- **Context Prompt (instance_context)**\n",
-    "    This prompt will be put right after the role prompt. If you create multiple chatbots of the same type, this prompt will be used only for one of them.\n",
-    "- **Starter Prompt (instance_starter)**\n",
-    "    \n",
+    "##### 2.1. Prompt Engineering\n",
+    "To create a chatbot, we need to provide prompts. There are three prompts that can be used to customise the behaviour of the chatbot: a ***role***, ***context***, and ***starter*** prompt.\n",
     "\n",
-    "Before we create our bot and store it in the dabase, we can edit the prompts and customise our bot or just use the once as prepared below.\n",
+    "**Role Prompt (type_role)**\n",
     "\n",
-    "##### type_role\n",
-    "Describes the general role of the chatbot.\n",
-    "    - What kind of persona should it enact/imitate. \n",
-    "    - What is the context it acts in\n",
-    "    - What is the goal of the conversation.\n",
-    "    \n",
-    "This prompt will be turned into a first prompt with role:system"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "URL to be handed out to the user: If you are following the instructions to deploy your chatbot(s) to pythonanywhere, this is the URL to access your chatbot.\n",
+    "This prompt will be put at the beginning of the utterances sent to openai for completion. If you create multiple chatbots of the same type, this prompt will be the same for each one of them.\n",
     "\n",
-    "##### Generic URL\n",
-    "https://[your pythonanywhere user name].pythonanywhere.com/[type id]/[user_id]/chat\n",
-    "##### For Example\n",
-    "https://monkey23.pythonanywhere.com/053e97a0-6a91-4589-8602-340aa47b6376/7515865e-4097-4dd7-9567-d3c7a4c1ed07/chat"
+    "You can use this prompt to specify the general (user-independent) behaviour of the chatbot, for example specifying the kind of person to enact, the topical context it acts in, and the goal of conversations it conducts with its users."
    ]
   },
   {
@@ -114,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type_role = \"\"\"\n",
+    "my_type_role = \"\"\"\n",
     "    As a digital therapy coach, check in daily with your patient to assess their well-being related to their chronic condition.\n",
     "    Use open-ended questions and empathetic dialogue to create a supportive environment.\n",
     "    Reflectively listen and encourage elaboration to assess the patient's detailed condition without directing the topic.\n",
@@ -125,13 +82,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### instance_context \n",
-    "Defines the context, in which the chatbot acts.\n",
-    "- Define how the answers of the chatbot should be formatted (here we added some html for the frontend)\n",
-    "- Define how the chatbot should be answering to the user\n",
+    "**Context Prompt (instance_context)**\n",
     "\n",
+    "This prompt will be put right after the role prompt. If you create multiple chatbots of the same type, this prompt will be used only for one of them. <br />\n",
     "\n",
-    "It will be turned into a second prompt with role:system."
+    "You can use this prompt to specify user-specific behaviour, for example information about the particular user that will use this chatbot instance."
    ]
   },
   {
@@ -140,8 +95,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instance_context = \"\"\"\n",
-    "    Meet Daniel Müller, 52, who is tackling obesity with a therapy plan that includes morning-to-noon intermittent fasting, thrice-weekly 30-minute swims, and a switch to whole grain bread.\n",
+    "my_instance_context = \"\"\"\n",
+    "    Meet Daniel Müller, 52, who is tackling obesity with a therapy plan that includes morning-to-noon intermittent fasting, \n",
+    "    thrice-weekly 30-minute swims, and a switch to whole grain bread.\n",
     "\"\"\""
    ]
   },
@@ -149,13 +105,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### instance_starter\n",
+    "**Starter Prompt (instance_starter)**\n",
     "\n",
-    "Will be used to generate an initial message to the user\n",
-    "- what should the chatbot start the conversation with\n",
-    "- ideally describe how the conversation shall continue after --> creates a more natural opening.\n",
+    "This prompt will be appended after the role and context prompts and is meant to instruct GPT to create an initial message that opens the conversation with the user. <br />\n",
     "\n",
-    "Will be turned into a final prompt with role:system"
+    "You can use this prompt to instruct GPT to welcome the user, ask initial questions, and how to proceed from there."
    ]
   },
   {
@@ -165,7 +119,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "instance_starter = \"\"\"\n",
+    "my_instance_starter = \"\"\"\n",
     "Jetzt, frage nach dem Namen und einem persönlichen Detail (z.B. Hobby, Beruf, Lebenserfahrung).\n",
     "Verwende diese im geschlechtsneutralem Gespräch in Du-Form.\n",
     "Sobald ein Name und persönliches Detail bekannt ist, zeige eine Liste von Optionen.\n",
@@ -173,94 +127,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2. Create Chatbot\n",
+    "The following code creates a new Chatbot where the chatbot type is identified by the type_id provided and the chatbot instance by the user_id. These two IDs will be used further below to construct the URL pointing to this chatbot once it is deployed.\n",
+    "\n",
+    "The type name is only used in the front-end and does not affect the conversational behaviour.\n",
+    "\n",
+    "Once this code is executed, the chatbot is stored in the database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bot = Chatbot(\n",
+    "    database_file=\"database/chatbot.db\", \n",
+    "    type_id=\"c48a13d7\",\n",
+    "    user_id=\"fe6d944d\",\n",
+    "    type_name=\"Health Coach\",\n",
+    "    type_role=my_type_role,\n",
+    "    instance_context=my_instance_context,\n",
+    "    instance_starter=my_instance_starter\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.3. Initiate Conversation Starter (Optional)\n",
+    "\n",
+    "If the chatbot should open the conversation with an initial message, the following code is executed. This code will execute a request to GPT, with the role, context and startet prompts specified above. The response from GPT (the initial message) will be stored in the database and therefore the user will see the opening message as soon as they access the chatbot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(bot.start())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Deploy and Disseminate\n",
+    "You can now deploy your chatbot. If you are using our guide for deploying to pythonanywhere.com, the URL to be handed out to the user is as follows.\n",
+    "\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Creating multiple instances of chatbot \"Coach\"\n",
-    "In the following, we can either create a bot for one user or for n users. Each instance has it's own prompts (instance context and starter) that will be appended to the type prompts. Most importantly, each instance has its own chat history."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import uuid\n",
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you want to create more than one instance, change `number_of_instances`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Amount of instances to be created\n",
-    "number_of_instances = 1\n",
+    "URL to be handed out to the user: If you are following the instructions to deploy your chatbot(s) to pythonanywhere, this is the URL to access your chatbot.\n",
     "\n",
-    "# Change the following to a list of hardcoded instance IDs if you want to use existing users.\n",
-    "user_ids = [str(uuid.uuid4()) for _ in range(number_of_instances)]\n",
+    "**Generic URL**\n",
     "\n",
-    "c  = 0 # counter for successful requests, don't change\n",
-    "error_c = 0 # counter for failed requests, don't change\n",
-    "for user_id in user_ids:\n",
-    "    bot = Chatbot(\n",
-    "        database_file=\"database/chatbot.db\", \n",
-    "        type_id=\"4b9e7b25-08d7-4031-b485-4741ecd48dd1\",\n",
-    "        user_id=user_id,\n",
-    "        type_name = \"PuzzleBot\",\n",
-    "        type_role = type_role,\n",
-    "        instance_context=instance_context,\n",
-    "        instance_starter=instance_starter\n",
-    "    )\n",
-    "    try:\n",
-    "        # each bot should have a first message to the user\n",
-    "        print(bot.start())\n",
-    "    except:\n",
-    "        error_c += 1\n",
-    "        continue\n",
-    "    c+=1\n",
-    "    time.sleep(15) #openai seems to produce more errors if we send the requests too fast.\n",
-    "    \n",
-    "print(\"successful: {}, failed: {}\".format(c, error_c))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Obtain URLs of all instances of a type\n",
-    "We need one instance of that type and can then use the type_instances() function to retrieve all of instance ids. Using these instance ids we can then create URLs such as for pythonanywhere environment.\n",
+    "https://[your pythonanywhere user name].pythonanywhere.com/[type id]/[user_id]/chat\n",
     "\n",
-    "- Enter your pythonanywhere username in the placeholder below.\n",
-    "- Change the type_id if you changed it above."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pythonanywhere_username = \"<ENTER YOUR PYTHONANYWHERE USERNAME HERE>\"\n",
-    "type_id = \"44b9e7b25-08d7-4031-b485-4741ecd48dd1\"\n",
-    "bot = Chatbot(\n",
-    "    database_file=\"database/chatbot.db\", \n",
-    "    type_id=type_id,\n",
-    "    user_id=user_ids[0]\n",
-    ")\n",
+    "**For Example**\n",
     "\n",
-    "for user_id in bot.type_instances():\n",
-    "    print(\"https://{}.pythonanywhere.com/{}/{}/chat\".format(pythonanywhere_username, type_id, user_id))"
+    "https://monkey23.pythonanywhere.com/c48a13d7/fe6d944d/chat"
    ]
   }
  ],
