--- a/chatbot_setup_advanced.ipynb
+++ b/chatbot_setup_advanced.ipynb
@@ -5,18 +5,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A Chatbot using GPT and a Database\n",
-    "This allows multiple chatbot types (e.g. a health coach and a learning assistant) to be created. Multiple chatbot instances can be created per chatbot type (e.g. for User X and User Y). Both, type and instance are stored and referenced with an ID (e.g. with a UUID) in the database.\n",
+    "# A Chatbot using GPT and a Database\n",
+    "This allows multiple chatbot types (e.g. a health coach and a learning assistant) to be created. Multiple chatbot instances can be created per chatbot type (e.g. a health coach for user X and user Y, and a learning assistant for user P and user Q). Both, types and instances are stored with and referenced by an ID (e.g. a UUID) in the database.\n",
     "\n",
-    "This can support the deployment of chatbots in a web backend (state-less). For example, the UUIDs of the type and instance can be read as URL parameters from a URL that users have received from you.\n",
+    "This can support the deployment of chatbots in a web backend (state-less). For example, the IDs of the type and instance can be read from parameters of a URL that users have received from you.\n",
     "\n",
     "A chatbot is created with the following arguments.\n",
     "- database_file: File of SQLite (in Folder data/)\n",
-    "- type_id: Reference to chatbot type\n",
-    "- instance_id: Reference to chatbot instance (typically one per user - however, may also be shared by multiple users)\n",
-    "- type_role: Role of chatbot type (will be turned into a first prompt with role:system)\n",
-    "- instance_context: Context of chatbot instance (will be turned into a second prompt with role:system)\n",
-    "- instance_starter: Will be used to generate an initial message to the user (will be turned into a final prompt with role:system)\n",
+    "- type_id: Reference to a chatbot type (existing or new one)\n",
+    "- instance_id: Reference to chatbot instance (existing or new one)\n",
+    "- type_role: Role prompt of chatbot type (will be turned into a first prompt with role:system)\n",
+    "- instance_context: Context prompt of chatbot instance (will be turned into a second prompt with role:system)\n",
+    "- instance_starter: Prompt that will be used to generate an initial message to the user (will be turned into a third prompt with role:system)\n",
     "\n",
     "The following functions are meant to be used from an application (e.g. from controllers of a REST API).\n",
     "- conversation_retrieve(with_system=False): Retrieve the previous conversation history (default: without prompts with role:system)\n",
@@ -24,26 +24,6 @@
     "- respond(user_says): Returns an assistance response to user_says\n",
     "- info_retrieve(): Returns the chatbot name, type role and instance context\n",
     "- reset(): Resets the conversation so far"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### OpenAI API Key and Model\n",
-    "\n",
-    "Rename the file chatbot/openai_template.py to openai.py and set the keys\n",
-    "    OPENAI_KEY = \"your OpenAI API key\"\\\n",
-    "    OPENAI_MODEL = \"gpt-3.5-turbo-16k\"\\"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install openai"
    ]
   },
   {
@@ -56,22 +36,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Create a chatbot \"Coach\" for user X"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the following, we use the default type_name, type_role, instance_context, and instance_starter defined in the Chatbot class. Provide your own prompts instead."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -79,8 +43,8 @@
    "source": [
     "bot = Chatbot(\n",
     "    database_file=\"database/chatbot.db\", \n",
-    "    type_id=\"4b9e7b25-08d7-4031-b485-4741ecd48dd1\",\n",
-    "    user_id=\"86f2177d-4462-4983-ace8-18a557c8db38\",\n",
+    "    type_id=\"aad724fc\",\n",
+    "    user_id=\"cd9f4d0f\",\n",
     "    type_name=Chatbot.default_type_name,\n",
     "    type_role=Chatbot.default_type_role,\n",
     "    instance_context=Chatbot.default_instance_context,\n",
@@ -89,14 +53,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Optionally retrieve the complete conversation (held so far) or the bot information (type_role, instance_context, and instance_starter) as retrieved from the database. Both may be used to display that on a frontend."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -104,19 +60,11 @@
    "source": [
     "bot = Chatbot(\n",
     "    database_file=\"database/chatbot.db\", \n",
-    "    type_id=\"4b9e7b25-08d7-4031-b485-4741ecd48dd1\",\n",
-    "    user_id=\"86f2177d-4462-4983-ace8-18a557c8db38\"\n",
+    "    type_id=\"aad724fc\",\n",
+    "    user_id=\"cd9f4d0f\"\n",
     ")\n",
     "print(bot.conversation_retrieve(with_system=True))\n",
     "print(bot.info_retrieve())"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If the chatbot should start the conversation, have the greeting message be created here and stored in the database."
    ]
   },
   {
@@ -133,12 +81,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "URL to be handed out to the user: If you are following the instructions to deploy your chatbot(s) to pythonanywhere, this is the URL to access your chatbot.\n",
+    "If you are following the instructions to deploy your chatbot(s) to pythonanywhere, this is the URL to access your chatbot.\n",
     "\n",
-    "##### Generic URL\n",
-    "https://[your pythonanywhere user name].pythonanywhere.com/[type id]/[user_id]/chat\n",
-    "##### For Example\n",
-    "https://monkey23.pythonanywhere.com/053e97a0-6a91-4589-8602-340aa47b6376/7515865e-4097-4dd7-9567-d3c7a4c1ed07/chat"
+    "https://[your pythonanywhere user name].pythonanywhere.com/[type id]/[user_id]/chat"
    ]
   },
   {
@@ -146,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Creating multiple instances of chatbot \"Coach\"\n",
+    "### Creating multiple instances of chatbot \"Coach\"\n",
     "In the following, we assume the existence of the bot type created in the cells above. We show example code that will generate N bot instances of that type. Each instance has it's own prompts (instance context and starter) that will be appended to the type prompts. Most importantly, each instance has its own chat history."
    ]
   },
@@ -177,7 +122,7 @@
     "for user_id in user_ids:\n",
     "    bot = Chatbot(\n",
     "        database_file=\"database/chatbot.db\", \n",
-    "        type_id=\"4b9e7b25-08d7-4031-b485-4741ecd48dd1\",\n",
+    "        type_id=\"aad724fc\",\n",
     "        user_id=user_id,\n",
     "        instance_context=Chatbot.default_instance_context,\n",
     "        instance_starter=Chatbot.default_instance_starter\n",
@@ -198,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Obtain URLs of all instances of a type\n",
+    "##### Obtain URLs of all instances of a type\n",
     "We need one instance of that type and can then use the type_instances() function to retrieve all of instance ids. Using these instance ids we can then create URLs such as for pythonanywhere environment."
    ]
   },
@@ -209,7 +154,7 @@
    "outputs": [],
    "source": [
     "pythonanywhere_username = \"<ENTER YOUR PYTHONANYWHERE USERNAME HERE>\"\n",
-    "type_id = \"4b9e7b25-08d7-4031-b485-4741ecd48dd1\"\n",
+    "type_id = \"aad724fc\"\n",
     "bot = Chatbot(\n",
     "    database_file=\"database/chatbot.db\", \n",
     "    type_id=type_id,\n",
@@ -224,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Complex Bot Behaviour: IQ Quest :-)"
+    "### Complex Bot Behaviour: IQ Quest :-)"
    ]
   },
   {
@@ -329,22 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['<p>Willkommen beim Puzzle-Lösungs-Workshop! 😊 Ich freue mich, dich hier zu sehen. Bevor wir anfangen, erzähl mir bitte etwas über dich. Wie heißt du und was ist ein Hobby oder Beruf, der dich besonders erfüllt?</p>']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bot = Chatbot(\n",
     "    database_file=\"database/chatbot.db\", \n",
-    "    type_id=\"0750df12\",\n",
-    "    user_id=\"46bb71a1f17c\",\n",
+    "    type_id=\"9374a3c4\",\n",
+    "    user_id=\"3b3bd93c\",\n",
     "    type_name=\"Puzzle Workshop\",\n",
     "    type_role=type_role,\n",
     "    instance_context=instance_context,\n",
