Some optimisations in the Tutorial/NB

--- a/chatbot_setup.ipynb
+++ b/chatbot_setup.ipynb
@@ -15,7 +15,8 @@
     "- OPENAI_KEY = \"your OpenAI API key in quotes\"\n",
     "- OPENAI_MODEL = \"model name in quotes, e.g. gpt-3.5-turbo-16k\"\n",
     "\n",
-    "##### 1.2. Install openai package"
+    "##### 1.2. Install openai package\n",
+    "<sup><sub>Note: If you are using GitHub Codespaces, the first time you execute a code cell, you might get asked questions from the development environment (IDE).</sub></sup>"
    ]
   },
   {
@@ -179,15 +180,6 @@
    "source": [
     "### 3. Deploy and Disseminate\n",
     "You can now deploy your chatbot. If you are using our guide for deploying to pythonanywhere.com, the URL to be handed out to the user is as follows.\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "URL to be handed out to the user: If you are following the instructions to deploy your chatbot(s) to pythonanywhere, this is the URL to access your chatbot.\n",
     "\n",
     "**Generic URL**\n",
     "\n",
@@ -195,7 +187,8 @@
     "\n",
     "**For Example**\n",
     "\n",
-    "https://monkey23.pythonanywhere.com/c48a13d7/fe6d944d/chat"
+    "https://monkey23.pythonanywhere.com/c48a13d7/fe6d944d/chat\n",
+    "\n"
    ]
   }
  ],
