--- a/chatbot_setup.ipynb
+++ b/chatbot_setup.ipynb
@@ -8,6 +8,8 @@
     "# A Chatbot using GPT and a Database\n",
     "This allows multiple chatbot types (e.g. a health coach and a learning assistant) to be created. Multiple chatbot instances can be created per chatbot type (e.g. a health coach for user X and user Y, and a learning assistant for user P and user Q). Both, types and instances are stored with and referenced by an ID (e.g. a UUID) in the database.\n",
     "\n",
+    "This notebook is a simplest possible tutorial guiding you to create one type with one instance. Have a look at the **chatbot_setup_advanced.jpynp** for more advanced features.\n",
+    "\n",
     "### 1. Preparation\n",
     "\n",
     "##### 1.1. Set the OpenAI API Key and Model\n",
@@ -16,7 +18,7 @@
     "- OPENAI_MODEL = \"model name in quotes, e.g. gpt-3.5-turbo-16k\"\n",
     "\n",
     "##### 1.2. Install openai package\n",
-    "<sup><sub>Note: If you are using GitHub Codespaces, the first time you execute a code cell, you might get asked questions from the development environment (IDE).</sub></sup>"
+    "<sup><sub>Note: If you are using GitHub Codespaces, the first time you execute a code cell, you might get asked questions from the development environment (IDE). You can say yes to recommended installations, and to installing/enabling reecommended extensions. When asked to **Select Another Kernel**, choose **Python Environments** and select the recommende environment, e.g., **Python 3.10.13**</sub></sup>"
    ]
   },
   {
