fixed german starter prompt

--- a/chatbot_setup.ipynb
+++ b/chatbot_setup.ipynb
@@ -123,9 +123,7 @@
    "source": [
     "\n",
     "my_instance_starter = \"\"\"\n",
-    "Jetzt, frage nach dem Namen und einem persönlichen Detail (z.B. Hobby, Beruf, Lebenserfahrung).\n",
-    "Verwende diese im geschlechtsneutralem Gespräch in Du-Form.\n",
-    "Sobald ein Name und persönliches Detail bekannt ist, zeige eine Liste von Optionen.\n",
+    "    After reviewing the patient's profile, compose a single, very short message that the therapy coach would use to initiate today's check-in conversation with Daniel.\n",
     "\"\"\""
    ]
   },
